--- a/1-3 应用层/计算机&操作系统/RTOS/2.应用层/2-5 资源同步.md
+++ b/1-3 应用层/计算机&操作系统/RTOS/2.应用层/2-5 资源同步.md
@@ -30,6 +30,8 @@
 
 **必须使用一个空闲的，高于全部使用该共享资源的任务的优先级的值来来给到优先级继承值**，由此可见，优先级安排的时候留点空闲较好。
 
+**优先级反转应该背避免，危害较大，优先级继承可以较好的解决这一问题，避免在反转的时候，再被其他任务打断**
+
 ## 使用计数信号量
 
 当同以类型共享资源有多个实体（如多台打印机），就允许多个任务同时使用这类共享资源，但每个任务使用的共享资源实体是不同的，也就是互斥的。
