--- a/2-1 C语言/2. 数据结构/2-12 五种排序.md
+++ b/2-1 C语言/2. 数据结构/2-12 五种排序.md
@@ -1,6 +1,8 @@
 ## 查找和排序
 
-排序式查找的前提
+排序是查找的前提。
+
+
 
 ### 1、冒泡排序
 
@@ -42,7 +44,394 @@ void bubble_sort(int * arr,int len)
 }
 ```
 
-## 选择排序
+### 2、选择排序
+
+略优于冒泡排序，因为交换次数相对较少。
+
+```c
+#include <stdio.h>
+
+#define MAXSIZE 10
+typedef struct
+{
+	int r[MAXSIZE];
+	int length;
+}SqList;
+
+void swap(SqList *L,int i,int j)
+{
+	int temp = L->r[i];
+	L->r[i] = L->r[j];
+	L->r[j] = temp;
+}
+//算法核心
+void SelectSort(SqList *L)
+{
+	int i,j,min;
+	for(i = 1;i<L->length;i++)
+	{
+		min = i;
+		for(j = i+1;j<=L->length;j++)
+		{
+			if(L->r[min] > L->r[j])
+				min = j;
+		}
+		if( i != min)
+		{
+			swap(L,i,min);
+		}
+	}
+}
+
+void main()
+{
+	int i;
+	SqList list;
+	printf("请输入数列的长度:\n");
+	scanf("%d",&(list.length));
+	printf("请输入待排序的数");
+	for(i = 1;i <= list.length;i++)
+	{
+		scanf("%d",&(list.r[i]));
+	}
+	SelectSort(&list);
+	for(i = 1;i <= list.length;i++)
+	{
+		printf("%d ",list.r[i]);
+	}
+	printf("\n");
+	return ;
+}
+
+```
+
+### 3、直接插入排序
+
+插入排序移动次数更少，一般要优于冒泡和选择。
+
+```c
+#include <stdio.h>
+
+#define MAXSIZE 10
+typedef struct
+{
+	int r[MAXSIZE];
+	int length;
+}SqList;
+
+void swap(SqList *L,int i,int j)
+{
+	int temp = L->r[i];
+	L->r[i] = L->r[j];
+	L->r[j] = temp;
+}
+
+//算法核心
+void InsertSort(SqList *L)
+{
+	int i,j;
+	for(i = 2;i <= L->length;i++)
+	{
+		if(L->r[i] < L->r[i-1])//将L->r[i]插入有序子表
+		{
+			L->r[0] = L->r[i];//设置哨兵
+			for(j = i-1;L->r[j] > L->r[0];j--)
+			{
+				L->r[j+1] = L->r[j];//依次往后移动，总是会空出一个位置来提供插入
+			}
+			L->r[j+1] = L->r[0];//插入到正确位置
+		}
+	}	
+}
+
+void main()
+{
+	int i;
+	SqList list;
+	printf("请输入数列的长度:\n");
+	scanf("%d",&(list.length));
+	printf("请输入待排序的数");
+	for(i = 1;i <= list.length;i++)
+	{
+		scanf("%d",&(list.r[i]));
+	}
+	InsertSort(&list);
+	for(i = 1;i <= list.length;i++)
+	{
+		printf("%d ",list.r[i]);
+	}
+	printf("\n");
+	return ;
+}
+
+```
+
+### 4、归并排序
+
+`递归法`
+
+```c
+#include <stdio.h>
+
+#define MAXSIZE 10
+typedef struct
+{
+	int r[MAXSIZE];
+	int length;
+}SqList;
+
+void swap(SqList *L,int i,int j)
+{
+	int temp = L->r[i];
+	L->r[i] = L->r[j];
+	L->r[j] = temp;
+}
+
+//按照输入进行合并
+void Merge(int SR[],int TR[],int i,int m,int n)
+{
+	int j,k,l;
+	for(j = m+1,k = i;i<=m && j<=n;k++)//合并两个有序数列
+	{
+		if(SR[i]<SR[j])
+			TR[k] = SR[i++];
+		else
+			TR[k] = SR[j++];
+	}
+	if(i <= m)//补充未插入的数
+	{	
+		for(l = 0;l <= m-i;l++)
+		{
+			TR[k+l] = SR[i+l];
+		}  
+	}
+	if(j <= n)
+	{
+		for(l = 0;l <= n-j;l++)
+		{
+			TR[k+l] = SR[j+l];
+		}
+	}
+}
+
+//算法核心
+void MSort(int SR[],int TR1[],int s,int t)
+{
+	int m;
+	int TR2[MAXSIZE];
+	if(s == t)
+	{
+		TR1[s] = SR[s];
+	}
+	else
+	{
+		m = (s+t)/2;
+		MSort(SR,TR2,s,m);//开始递归左边部分
+		MSort(SR,TR2,m+1,t);//开始递归右边部分
+		Merge(TR2,TR1,s,m,t);		
+	}
+}	
+
+void MergeSort(SqList *L)
+{
+	MSort(L->r,L->r,1,L->length);
+}
+
+void main()
+{
+	int i;
+	SqList list;
+	printf("请输入数列的长度:\n");
+	scanf("%d",&(list.length));
+	printf("请输入待排序的数");
+	for(i = 1;i <= list.length;i++)
+	{
+		scanf("%d",&(list.r[i]));
+	}
+	MergeSort(&list);
+	for(i = 1;i <= list.length;i++)
+	{
+		printf("%d ",list.r[i]);
+	}
+	printf("\n");
+	return ;
+}
+```
+
+`非递归法`
+
+```c
+#include <stdio.h>
+#include <stdlib.h>
+
+#define MAXSIZE 20
+typedef struct
+{
+	int r[MAXSIZE];
+	int length;
+}SqList;
+
+void swap(SqList *L,int i,int j)
+{
+	int temp = L->r[i];
+	L->r[i] = L->r[j];
+	L->r[j] = temp;
+}
+//将SR[i...m]和SR[m+1...n]归并为有序的TR[i...n]
+void Merge(int SR[],int TR[],int i,int m,int n)
+{
+	int j,k,l;
+	for(j = m+1,k = i;i<=m && j<=n;k++)//合并两个有序数列
+	{
+		if(SR[i]<SR[j])
+			TR[k] = SR[i++];
+		else
+			TR[k] = SR[j++];
+	}
+	if(i <= m)//补充未插入的数
+	{	
+		for(l = 0;l <= m-i;l++)
+		{
+			TR[k+l] = SR[i+l];
+		}  
+	}
+	if(j <= n)
+	{
+		for(l = 0;l <= n-j;l++)
+		{
+			TR[k+l] = SR[j+l];
+		}
+	}
+}
+//将SR[]中相邻长度为S的子序列两两归并到TR[]
+void MergePass(int SR[],int TR[],int s,int n)
+{
+	int i = 1;
+	int j;
+	while(i <= n-2*s+1)
+	{
+		Merge(SR,TR,i,i+s-1,i+2*s-1);//两两归并
+		i = i+2*s;
+	}
+	if(i<n-s+1)
+	{
+		Merge(SR,TR,i,i+s-1,n);
+	}
+	else
+	{
+		for(j = i;j <= n;j++)
+			TR[j] = SR[j];
+	}
+}
+//核心算法
+void MergeSort2(SqList *L)
+{
+	int *TR = (int *)malloc(L->length*sizeof(int));
+
+	int k = 1;
+	while(k < L->length)
+	{
+		MergePass(L->r,TR,k,L->length);
+		k = 2*k;//子序列长度加倍
+		MergePass(TR,L->r,k,L->length);
+		k = 2*k;
+	}
+}
+
+void main()
+{
+	int i;
+	SqList list;
+	printf("请输入数列的长度:\n");
+	scanf("%d",&(list.length));
+	printf("请输入待排序的数");
+	for(i = 1;i <= list.length;i++)
+	{
+		scanf("%d",&(list.r[i]));
+	}
+	MergeSort2(&list);
+	for(i = 1;i <= list.length;i++)
+	{
+		printf("%d ",list.r[i]);
+	}
+	printf("\n");
+	return ;
+}
+
+```
+
+
+
+### 5、快速排序
+
+```c
+#include <stdio.h>
+
+#define MAXSIZE 20
+typedef struct
+{
+	int r[MAXSIZE];
+	int length;
+}SqList;
+
+void swap(SqList *L,int i,int j)
+{
+	int temp = L->r[i];
+	L->r[i] = L->r[j];
+	L->r[j] = temp;
+}
+
+int Partition(SqList *L,int low,int high)
+{
+	int pivotkey;
+	pivotkey = L->r[low];
+	while(low<high)
+	{
+		while(low<high && L->r[high] >= pivotkey)
+			high--;
+		swap(L,low,high);
+		while(low<high && L->r[low] <= pivotkey)
+			low++;
+		swap(L,low,high);
+	}
+}
+
+void QSort(SqList *L,int low,int high)
+{
+	int pivot;
+	if(low<high)
+	{
+		pivot = Partition(L,low,high);//把数列分开
+		QSort(L,low,pivot-1);
+		QSort(L,pivot+1,high);
+	}
+}
+
+void QuickSort(SqList *L)
+{
+	QSort(L,1,L->length);
+}
+
+void main()
+{
+	int i;
+	SqList list;
+	printf("请输入数列的长度:\n");
+	scanf("%d",&(list.length));
+	printf("请输入待排序的数");
+	for(i = 1;i <= list.length;i++)
+	{
+		scanf("%d",&(list.r[i]));
+	}
+	QuickSort (&list);
+	for(i = 1;i <= list.length;i++)
+	{
+		printf("%d ",list.r[i]);
+	}
+	printf("\n");
+	return ;
+}
+```
 
 
 
