--- a/1-3 应用层/计算机&操作系统/RTOS/1.内核层/1-3 阻塞延时与空闲任务.md
+++ b/1-3 应用层/计算机&操作系统/RTOS/1.内核层/1-3 阻塞延时与空闲任务.md
@@ -2,6 +2,8 @@
 
 Cortex-M的内核定时器，无关芯片型号，24位递减计数，减到0则产生中断。计数器每计数一次的时间为1/SYSCLK。任务控制块中需要添加计数变量，然后在阻塞延时中设置systick的值，然后进行一个任务调度。
 
+中断服务函数中调用OSTimeTick(),该函数在每个时钟节拍了解每个任务的延时状态，使其中已经到了延时时限的非挂起任务进入就绪状态。
+
  
 
 **阻塞延迟：**在延时时，进行任务切换。
