--- a/3-1 嵌入式笔试面试系列/1-1 嵌入式笔试精选.md
+++ b/3-1 嵌入式笔试面试系列/1-1 嵌入式笔试精选.md
@@ -109,6 +109,8 @@ int main(){
 
 
 
+
+
 ## **公司二（主要考察C++和内存）：**
 
 1、一个类的友元函数可以访问该类的（D）
@@ -121,9 +123,17 @@ int main(){
 
 6、C++中指针和引用的区别
 
+>1.指针有自己的一块空间，而引用只是一个别名；
+>
+>2.使用sizeof看一个指针的大小是4，而引用则是被引用对象的大小；
+>
+>3.指针可以被初始化为NULL，而引用必须被初始化且必须是一个已有对象 的引用；
+
 8、异常的定义，什么时候会抛出异常
 
 9、n个节点的单项链表（没有头节点），最少有几个指针域
+
+> N+1(头指针)
 
 11、析构函数中不能做的是:抛出异常
 
@@ -147,7 +157,7 @@ long int 是4字节
 
 20、经典的sizeof(struct)和内存对齐
 
-21、1 0
+21、==1，0==
 
 ```c
 #include<stdio.h>
@@ -155,7 +165,7 @@ long int 是4字节
 int main(){
 
   char a[1];
-  char b[0];
+  char b[0];	
   printf("%d,%d\n",sizeof(a),sizeof(b));
   return 0;
 }
@@ -176,7 +186,7 @@ int main(){
 
 24、答案20
 
-**考点：static静态变量，只初始化一次**
+**考点：static静态变量，只初始化一次**  ==sizof(指针)64位机器上为8==
 
 ```c
 
@@ -198,7 +208,7 @@ int main(){
   memset(str,'0',16);
   strcpy(str,"12345678");
 
-  for(i=0;i<sizeof(str);i++){
+  for(i=0;i<sizeof(str);i++){//sizeof指针为8
     count(&sum,str[i]-'0');
   }
   printf("%d",sum);
