--- a/2-1 C语言/2. 数据结构/2-4 堆栈.md
+++ b/2-1 C语言/2. 数据结构/2-4 堆栈.md
@@ -12,7 +12,7 @@
 
 判断堆栈是否已满。
 
-`stach.h摘至《C和指针》`
+`stack.h摘至《C和指针》`
 
 ```c
 /*
@@ -28,7 +28,7 @@ void push(STACK_TYPE value);
 /*
 **pop 出栈
 */
-void pop(STACK_TYPE *value);
+void pop(void);
 
 /*
 **top 返回栈顶的值
@@ -44,9 +44,125 @@ bool is_empty(void);
 **is_full 判断堆栈是否已满，满返回TRUE，否则返回FALSE
 */
 bool is_full(void);
+
+/*
+**destroy_stack
+*/
+void destroy_stack(void);
+
+/*
+**遍历堆栈
+*/
+void travel_stack(void);
 ```
 
-
-
 ## 堆栈实现
+
+```c
+#include "stack.h"
+#include <stdio.h>
+#include <stdlib.h>
+#include <malloc.h>
+#include <assert.h>
+
+#define FALSE 0
+
+typedef struct STACK_NODE{
+    STACK_TYPE value;
+    struct STACK_NODE *pNext;
+}StackNode;
+
+static StackNode *pHead = NULL;
+
+/*
+**push 压栈 与链表的创建不同，新的节点要作为头节点，链表的创建则相反
+*/
+void push(STACK_TYPE value)
+{
+    
+    StackNode *pNew = NULL;
+    pNew = ( StackNode *)malloc(1*sizeof(StackNode));
+    assert(pNew != NULL);
+    pNew->value = value;
+    pNew->pNext = pHead;//将新的指针指向下一个节点
+    pHead = pNew;//将头指针向上移动
+    
+}
+
+/*
+**pop 出栈
+*/
+void pop(void)
+{
+    StackNode *first_node;
+    
+    assert(!is_empty());
+    first_node = pHead;//将第一个弹出
+    pHead = pHead->pNext;
+    free(first_node);
+}
+
+/*
+**top 返回栈顶的值
+*/
+STACK_TYPE top(void)
+{
+    assert(!is_empty());
+    
+    return pHead->value;
+}
+
+/*
+**is_empty 判断堆栈是否为空,空返回TRUE，否则返回FALSE
+*/
+bool is_empty(void)
+{
+    return pHead == NULL;
+}
+
+/*
+**is_full 判断堆栈是否已满，满返回TRUE，否则返回FALSE
+*/
+bool is_full(void)
+{
+    return FALSE;
+}
+
+/*
+**destroy_stack
+*/
+void destroy_stack()
+{
+    while(!is_empty())
+        pop();
+}
+
+/*
+**travel_stack 遍历堆栈
+*/
+void travel_stack()
+{
+    StackNode *p = pHead;
+    while(p != NULL)
+    {
+        printf("%d ",p->value);
+        p = p->pNext;
+    }
+}
+
+int main()
+{
+    int a = 1,b = 2,c = 3,d = 4,e = 5;
+    push(a);
+    push(b);
+    push(c);
+    push(d);
+    push(e);
+    travel_stack();
+    destroy_stack();
+    push(e);
+    travel_stack();
+    return 0;
+}
+```
 
