--- a/3-1 嵌入式笔试面试系列/1-1 嵌入式笔试精选.md
+++ b/3-1 嵌入式笔试面试系列/1-1 嵌入式笔试精选.md
@@ -59,15 +59,14 @@ int main(){
 
 2、sizeof 结构体（在结构体中定义变量，考察int,char分配字节数和字节对齐）
 
-```c
-字节对齐的细节和具体编译器实现相关，但一般而言，满足三个准则：
 
-1. 结构体变量的首地址能够被其最宽基本类型成员的大小所整除；
+>字节对齐的细节和具体编译器实现相关，但一般而言，满足三个准则：
+>
+>1. 结构体变量的首地址能够被其最宽基本类型成员的大小所整除；
+>2. 结构体每个成员相对于结构体首地址的偏移量都是当前成员大小的整数倍，如有需要编译器会在成员之间加上填充字节；
+>3. 结构体的总大小为结构体最宽基本类型成员大小的整数倍，如有需要编译器会在最末一个成员之后加上填充字节
 
-2. 结构体每个成员相对于结构体首地址的偏移量都是当前成员大小的整数倍，如有需要编译器会在成员之间加上填充字节；
 
-3. 结构体的总大小为结构体最宽基本类型成员大小的整数倍，如有需要编译器会在最末一个成员之后加上填充字节
-```
 
 3、结构体如何初始化变量
 
