--- a/3-1 嵌入式笔试面试系列/3-1 嵌入式易错点.md
+++ b/3-1 嵌入式笔试面试系列/3-1 嵌入式易错点.md
@@ -23,6 +23,19 @@ int main()
 
 a的字符为97，A的字符为65！！
 
+  char b[0]不分配空间，不占用内存空间。
+
 ## 指针
 
 sizeof(指针)：实际上，指针在16位系统上的大小为2（如果你能找到一个），在32位系统上是4，在64位系统上是8
+
+## 结构体字节对齐
+
+sizeof 结构体（在结构体中定义变量，考察int,char分配字节数和字节对齐）
+
+
+>字节对齐的细节和具体编译器实现相关，但一般而言，满足三个准则：
+>
+>1. 结构体变量的首地址能够被其最宽基本类型成员的大小所整除；
+>2. 结构体每个成员相对于结构体首地址的偏移量都是当前成员大小的整数倍，如有需要编译器会在成员之间加上填充字节；
+>3. 结构体的总大小为结构体最宽基本类型成员大小的整数倍，如有需要编译器会在最末一个成员之后加上填充字节
