--- a/3-1 嵌入式笔试面试系列/3-2 高频需要强化记忆.md
+++ b/3-1 嵌入式笔试面试系列/3-2 高频需要强化记忆.md
@@ -1,4 +1,43 @@
 ### 1.求素数
 
+```c
+#include <stdio.h>
+
+void prime_num(int n)
+{
+    int i,j;
+    if(n < 2)
+    {
+        return ;
+    }
+    if(n < 3)
+    {
+        printf("2 3\n");
+        return ;
+    }
+    for(i = 3;i <= n;i = i+2)
+    {
+        for(j = 2;j <= i;j++)
+        {
+            if(i%j == 0)
+                break;
+        }
+        if(j == i)
+        {
+            printf("%d ",i);
+        }
+    }
+}
+
+int main()
+{
+ 	int count;
+    printf("请输入截止值：\n");
+    scanf("%d",&count);
+    prime_num(count);
+    return 0;
+}
+```
+
 ### 2.双向链表的增删改查
 
