--- a/3-1 嵌入式笔试面试系列/3-2 高频需要强化记忆.md
+++ b/3-1 嵌入式笔试面试系列/3-2 高频需要强化记忆.md
@@ -15,14 +15,14 @@ void prime_num(int n)
         printf("2 3\n");
         return ;
     }
-    for(i = 3;i <= n;i = i+2)
+    for(i = 3;i <= n;i = i+2)//一层循环为需要求的每一个是数，i<=n,如果去掉=，则不会计算n本身
     {
-        for(j = 2;j <= i;j++)
+        for(j = 2;j < i;j++)//二层循环判断该数是不是素数，最后跳出循环j会等于i,这是一个阈值，决定了这个数是不是素数
         {
             if(i%j == 0)
                 break;
         }
-        if(j == i)
+        if(j == i)//出来之后根据循环判断，如果循环到了它本身，那么它就是一个素数
         {
             printf("%d ",i);
         }
