--- a/2-1 C语言/2. 数据结构/2-12 五种排序.md
+++ b/2-1 C语言/2. 数据结构/2-12 五种排序.md
@@ -392,6 +392,7 @@ int Partition(SqList *L,int low,int high)
 			low++;
 		swap(L,low,high);
 	}
+    return high;
 }
 
 void QSort(SqList *L,int low,int high)
