--- a/1-3 应用层/计算机&操作系统/现代操作系统/1、虚拟化/1、抽象：进程.md
+++ b/1-3 应用层/计算机&操作系统/现代操作系统/1、虚拟化/1、抽象：进程.md
@@ -1,4 +1,6 @@
-## 一些概念
+# 一、抽象：进程的概念
+
+## 1.一些概念
 
 ### 进程
 
@@ -14,6 +16,27 @@
 
 程序变为进程。程序在磁盘中，被调用到内存中，分配栈，以及其他初始化操作。
 
-## 小结
+## 2.小结
 
 就通用操作系统来看，和UCOS这样的实时操作系统很像，比如一些概念，如进程，调度，上下文切换，进程控制块等等。基本上他们的设计思想是一致的，可以类比学习。
+
+# 二、插叙：进程API
+
+## 1.进程API
+
+### fork()
+
+创建进程。
+
+### wait()
+
+父进程等待子进程执行完毕。
+
+### exec()
+
+exec系列中的系统调用都完成相同的功能（只是参数不同而已），它们把一个新程序装入调用进程的内存空间，来改变调用进程的执行代码，从而形成新进程。如果exec调用成功，调用进程将被覆盖，然后从新程序的入口开始执行，这样就产生了一个新的进程，但是它的进程标识符与调用进程相同。这就是说，exec没有建立一个与调用进程并发的新进程，而是用新进程取代了原来的进程。所以，在exec调用成功后，没有任何数据返回，这与fork()不同。
+
+## 2.小结
+
+进程API采用分离设计，尤其是fork和exec这两个API，这样设计，可以在exec之前，fork之后执行其他操作，例如重定位，这样子API的使用才能更加灵活与强大。
+
