--- a/1-3 应用层/计算机&操作系统/现代操作系统/1、虚拟化/虚拟化CPU/1、抽象：进程.md
+++ b/1-3 应用层/计算机&操作系统/现代操作系统/1、虚拟化/虚拟化CPU/1、抽象：进程.md
@@ -6,9 +6,11 @@
 
 操作系统为正在运行的程序提供的抽象。任何时刻我们都可以清点它在执行过程中访问火影响的系统的不同的部分。
 
-### 策略与机制
+### 机制与策略
 
-可以把策略看为系统为“哪个”问题提供答案。可以看为系统的“如何”为问题提供答案。
+可以把**机制**看为系统的“如何”为问题提供答案。
+
+可以把**策略**看为系统为“哪个”问题提供答案。
 
 策略和机制的分开就是一种模块化的形式，通用的软件设计原则。
 
@@ -18,7 +20,7 @@
 
 ## 2.小结
 
-就通用操作系统来看，和UCOS这样的实时操作系统很像，比如一些概念，如进程，调度，上下文切换，进程控制块等等。基本上他们的设计思想是一致的，可以类比学习。
+就通用操作系统来看，和UCOS这样的实时操作系统很像，比如一些概念，如进程，状态，调度，上下文切换，进程控制块等等。基本上他们的设计思想是一致的，可以类比学习。
 
 # 二、插叙：进程API
 
