--- a/3-1 嵌入式笔试面试系列/1-笔试题/1-001 嵌入式笔试精选.md
+++ b/3-1 嵌入式笔试面试系列/1-笔试题/1-001 嵌入式笔试精选.md
@@ -240,7 +240,7 @@ int main(){
 ```
 
 ```c
-
+16,5,3
 #include<stdio.h>
 #include<malloc.h>
 #include<string.h>
@@ -260,7 +260,7 @@ int main(){
 
 32、C++中noexcept关键字是干什么的
 
-33、双向链表代码补全
+**33、双向链表代码补全**
 
 36、输入几个数，从大到小输出，只输出偶数（冒泡快排都可以）
 
@@ -311,13 +311,17 @@ unit8_t
 
 3、面向对象编程三大特点
 
-
+==封装、继承、多态==
 
 四、简答
 
 1、SPI四种模式，简述其中一种模式，画出时序图
 
+==？==
+
 2、判断大小端的三种方式
+
+==？==
 
 3、为什么TCP是稳定传输
 
@@ -326,6 +330,8 @@ unit8_t
 ## **公司四（主要考察Linux、数据结构、面向对象编程思想、C++）：**
 
 1、如果要在根目录运行程序，需要把路径设置到下面哪个环境变量中
+
+
 
 2、inline函数
 
