--- a/1-3 应用层/计算机&操作系统/现代操作系统/1、虚拟化/1-2 虚拟化内存/1.抽象：地址空间.md
+++ b/1-3 应用层/计算机&操作系统/现代操作系统/1、虚拟化/1-2 虚拟化内存/1.抽象：地址空间.md
@@ -1,4 +1,34 @@
-## 概述
+# 概述
 
 虚拟内存主要有三个目标，首先是透明，让每个进程看不见操作系统，误以为自己是独立的，其次是效率，最后是保护。同时虚拟化内存需要很多机制，这些机制需要操作系统和硬件的支持，同时也需要一些关键的策略。
 
+# 机制
+
+## 一、地址转换
+
+### 1.概述
+
+硬件配合操作系统完成地址转换。CPU需要两个寄存器，基址寄存器和界限寄存器。它们能够将地址空间放在物理内存的任何位置，同时又能确保进程值访问自己的地址空间。
+
+> 物理地址 = 虚拟地址+基址寄存器地址
+
+> 界限寄存器记录地址空间大小，在硬件将虚拟地址与基址寄存器内容求和前，检查这个边界，或者记录地址空间结束的物理地址，等到硬件转换完成后再检查边界。
+
+有时我们将CPU的这个负责地址转换的部分统称为内存管理单元（MMU）
+
+### 2.硬件在地址转换时需要提供的支持
+
++ 特权模式
++ 基址、界限寄存器
++ 能够转换虚拟地址并且检查它是否越界
++ 修改基址、界限寄存器的特权指令
++ 注册异常处理程序的特权指令
++ 能够触发异常
+
+### 3.操作系统需要提供的支持
+
+在硬件提供的支持上，合理的进行调用，在进程创建，结束，切换，异常时，都应该有相对应的操作。
+
+### 4.小结
+
+地址转换能制造进程独享内存的假像，并且能提供有效的保护，但是效率不够高，容易造成分配的内存不适用，内部碎片过多，所以我们需要更复杂的机制，避免内部碎片。将基址加界限的概念稍微泛化----”分段“。
