--- a/3-1 嵌入式笔试面试系列/1- 笔试题/1-001 嵌入式笔试精选.md
+++ b/3-1 嵌入式笔试面试系列/1- 笔试题/1-001 嵌入式笔试精选.md
@@ -335,9 +335,13 @@ unit8_t
 
 2、inline函数
 
+==内联函数==
+
 3、冯‘诺依曼：计算机硬件由运算器、控制器、存储器、输入设备和输出设备五大部分组成。
 
 4、对900，512，613，700，810，采用选择排序，则第三轮排序后结果输出是多少？
+
+==512，613，700，900，810==
 
 5、某一段程序的时间复杂度是多少
 
@@ -345,15 +349,21 @@ unit8_t
 
 8、死锁
 
+==？==
+
 9、搜索中“主键”的意思
 
 10、采样频率至少不小于多少才能还原波形
 
-
+==2倍==
 
 1、构造函数和析构函数的调用参数的顺序
 
+==先构造，函数完成后再析构==
+
 2、进程和线程的区别
+
+==？==
 
 3、java如何类继承
 
@@ -361,13 +371,17 @@ unit8_t
 
 5、结构体避免编译器优化的关键字
 
+==volatile==
+
 6、java中，switch（expression）语句，expression不可能是什么类型
 
-7、python3代码运行结果是？
+7、python3代码运行结果是
 
 8、C语言中static关键字
 
 9、C++中不能重载的符号是：++、>=、sizeof、delete
+
+==::  .   .*  ?:   sizeof==
 
 10、C++中生成.exe文件的过程
 
@@ -382,9 +396,15 @@ A   ROM  B  RAM   C  寄存器   D  flash
 
 2、波特率的单位
 
+==B，每秒传输码元的个数==
+
 3、读写寄存器快还是flash快
 
+==寄存器==
+
 4、中断返回地址是谁的地址
+
+==跳转之前的地址？==
 
 5、逻辑题
 
@@ -406,9 +426,9 @@ A   ROM  B  RAM   C  寄存器   D  flash
 
 14、const作用，以及
 
-int  const *  a
+int  const *  a==指向常量的指针==
 
-const  int *  a
+const  int *  a==指向常量的指针==
 
 15、sizeof 数组
 
