--- a/2-1 C语言/1. C语言知识点/1-3.1 动态内存分配.md
+++ b/2-1 C语言/1. C语言知识点/1-3.1 动态内存分配.md
@@ -25,7 +25,7 @@ recalloc用来修改一个原先已经分配内存块的大小。可以使内存
 ```c
 #include <stdlib.h>
 #define malloc 
-#define MALLOC(num,type) (type *)alloc((num) * sizeof(type))
+#define MALLOC(num,type) (type *)malloc((num) * sizeof(type))
 extern  void *alloc(size_t size);
 /***********不易发生错误的内存分配器接口：alloc.h***********/
 /*其中“#define malloc”是为了防止用户直接调用库函数malloc，只要包含了这个头文件alloc.h，就不能直接调用库函数malloc，而只能调用自定义函数MALLOC，如果用户要调用库函数malloc编译器会发生错误；*/
