--- a/1-3 应用层/计算机&操作系统/现代操作系统/1、虚拟化/1-2 虚拟化内存/1.抽象：地址空间.md
+++ b/1-3 应用层/计算机&操作系统/现代操作系统/1、虚拟化/1-2 虚拟化内存/1.抽象：地址空间.md
@@ -32,3 +32,16 @@
 ### 4.小结
 
 地址转换能制造进程独享内存的假像，并且能提供有效的保护，但是效率不够高，容易造成分配的内存不适用，内部碎片过多，所以我们需要更复杂的机制，避免内部碎片。将基址加界限的概念稍微泛化----”分段“。
+
+## 二、分段
+
+### 1.概述
+
+在地址转换的基础上，再增加硬件支持，将程序每个段分开存入物理内存，这样就能避免内部碎片，提高内存的适用。具体做法就是，加入寄存器，可以通过地址的前两位来当标志位，显式地说明要引用的段，任然保持基址和界限寄存器，针对不同的段寄存器则不同。
+
+### 2.小结
+
+分段任然存在缺陷，不能完全避免”外部碎片“----当一个进程需要20K的段，但是当前最大的段为20K;或者一个很大但是稀疏的堆都在一个逻辑段中。我们需要进入“空闲空间管理”。
+
+
+
