--- a/2-1 C语言/2. 数据结构/2-0 数据结构.md
+++ b/2-1 C语言/2. 数据结构/2-0 数据结构.md
@@ -12,6 +12,16 @@
 
 + 看懂别人的，然后自己敲，不停的试
 
+## 泛型
+
+利用某种技术达到的效果就是：不同的存数方式，执行的操作是一样的。##
+
+## 算法
+
+狭义的算法是与数据的存储方式密切相关
+
+广义的算法是与数据的存储方式无关
+
 
 
 ## 再次讨论什么是数据结构
