--- a/1-3 应用层/计算机&操作系统/现代操作系统/1、虚拟化/1-2 虚拟化内存/2.空闲空间管理.md
+++ b/1-3 应用层/计算机&操作系统/现代操作系统/1、虚拟化/1-2 虚拟化内存/2.空闲空间管理.md
@@ -1,2 +1,63 @@
 # 空闲空间管理
 
+## 一、基本概念
+
+### 内部碎片
+
+分配程序给出的内存块超出请求的大小，在这种块中超出请求的空间被认为是内部碎片。
+
+### 外部碎片
+
+空闲空间被分割成不同大小的小块，成为碎片，后续的请求可能失败，因为没有一块足够大的连续空闲空间，即使总的空闲空间超出了请求的大小。
+
+## 二、空闲空间管理的通用底层机制
+
+### 分割与合并
+
+需要分配的内存小于某块空闲内存，就会把空闲内存分割，与此相对的，在释放一块内存时，检测相邻空闲块，如果存在空闲快，则进行合并。
+
+### 追踪分配空间的大小
+
+分配时，额外分配一小块内存，用于记录分配空间的大小。
+
+### 嵌入空闲列表
+
+**有了前面两个机制，建立空闲列表便容易了起来。**在空闲空间本身中建立空闲空间列表，使用一个结构体记录空闲空间的位置，同时在发生内存分配时，在分配内存中记录分配大小，在发生free时，则将释放的内存使用指针链接到空闲内存块中（链接到上一个被释放的内存块中，此时内存看起来会非常的破碎）。在必要的时候进行遍历列表，合并相邻块。
+
+### 堆增长
+
+大多数传统的分配程序会从很小的堆开始，当空间耗尽时，再向操作系统申请更大的空间。
+
+## 三、基本策略
+
+理想的分配程序可以同时保证快速和碎片最小化，但分配和释放的请求序列是任意的，因此不存在最好，只有最合适。
+
+### 最优匹配
+
+遍历整个空闲列表，找到和请求一样或者更大的空闲快，返回其中最小的一块。
+
+> 查找正确的空闲快，付出较高的性能代价
+
+### 最差匹配
+
+与最优相反
+
+>过量碎片化，很高的开销
+
+### 首次匹配
+
+找到一个足够大的块，返回给用户。
+
+>有速度优势，但是有时会在空闲列表开头部分产生很多小块，基于地址给空闲列表排序可以让合并操作容易，减少内存碎片。
+
+### 下次匹配
+
+多维护一个指针，指向上一次查找结束的位置。
+
+> 性能与首次匹配相当
+
+### 其他方式
+
+分离空闲列表：为经常使用的大小内存的单独建一个列表，使用厚块分配程序处理如何分配的问题。
+
+伙伴系统：二分分治思想。
