--- a/1-3 应用层/计算机&操作系统/现代操作系统/1、虚拟化/1-2 虚拟化内存/1.抽象：地址空间.md
+++ b/1-3 应用层/计算机&操作系统/现代操作系统/1、虚拟化/1-2 虚拟化内存/1.抽象：地址空间.md
@@ -41,7 +41,37 @@
 
 ### 2.小结
 
-分段任然存在缺陷，不能完全避免”外部碎片“----当一个进程需要20K的段，但是当前最大的段为20K;或者一个很大但是稀疏的堆都在一个逻辑段中。我们需要进入“空闲空间管理”。
+分段任然存在缺陷，不能完全避免”外部碎片“----当一个进程需要20K的段，但是当前最大的段为20K;或者一个很大但是稀疏的堆都在一个逻辑段中。我们需要学习**“空闲空间管理”**（见此文件夹另一个文件）。
 
+## 三、分页
 
+### 1.概述
+
+分页不是将一个进程的地址空间分割成不同长度的逻辑段，而是分割成固定大小的单元，每个单元称为一页。相应的，把物理内存看成定长槽块的阵列，叫做页帧。
+
+>分页比较灵活，操作系统能够高效地提供地址空间的抽象
+>
+>分页提供的空闲空间管理具有简单性
+
+**页表：**为了记录地址空间的每个虚拟页放在物理内存中的位置，操作系统通常为每个进程保存一个数据结构，称为页表。
+
+**虚拟页面号：**virtual page number,VPN
+
+**页内偏移量：**offset
+
+**物理页号：**physical page number,PPN
+
+### 2.页表存在哪
+
+可以存在物理内存，也可以存在虚拟内存，甚至可以存在磁盘上
+
+### 3.页表有什么
+
+最简单的页表就是线性页表，就是一个数组，通过虚拟页号检索数组，找到页表项（PTE），从页表项中找到物理帧号（PFN）。
+
+页表项中内容:许多标志位，如有效位，保护位，存在位，参考位等等，标志位剩下的就是PFN。
+
+### 4.小结
+
+分页比较慢，需要许多额外的内存访问来访问页表，分页也会造成内存浪费，内存被页表塞满而不是有用的应用数据程序，为了解决这两个问题，**我们需要引入“快速地址转换”和“较小的表”**（见此目录另外两个文件）。
 
