--- a/1-3 应用层/计算机&操作系统/现代操作系统/1、虚拟化/1-2 虚拟化内存/1.抽象：地址空间.md
+++ b/1-3 应用层/计算机&操作系统/现代操作系统/1、虚拟化/1-2 虚拟化内存/1.抽象：地址空间.md
@@ -46,6 +46,8 @@
 
 ### 1.概述
 
+**每个程序存储在磁盘上，被分成特定的段，加载至内存中，程序中的地址为偏移量，当运行时被重定位，也就是加上基地址。重定位过程：每个段都有一个基地址记录在程序的“PCB（控制块）”中。基地址根据查表得到，此表名为LDT，每个进程都有自己的LDT，由硬件操作查询。每次进程进程切换，表中的基地址也会被更改。**
+
 在地址转换的基础上，再增加硬件支持，将程序每个段分开存入物理内存，这样就能避免内部碎片，提高内存的适用。具体做法就是，加入寄存器，可以通过地址的前两位来当标志位，显式地说明要引用的段，任然保持基址和界限寄存器，针对不同的段寄存器则不同。
 
 ### 2.小结
