--- a/1-3 应用层/计算机&操作系统/现代操作系统/1、虚拟化/1-2 虚拟化内存/1.抽象：地址空间.md
+++ b/1-3 应用层/计算机&操作系统/现代操作系统/1、虚拟化/1-2 虚拟化内存/1.抽象：地址空间.md
@@ -46,7 +46,7 @@
 
 ### 1.概述
 
-**每个程序存储在磁盘上，被分成特定的段，加载至内存中，程序中的地址为偏移量，当运行时被重定位，也就是加上基地址。重定位过程：每个段都有一个基地址记录在程序的“PCB（控制块）”中。基地址根据查表得到，此表名为LDT，每个进程都有自己的LDT，由硬件操作查询。每次进程进程切换，表中的基地址也会被更改。**
+**每个程序存储在磁盘上，被分成特定的段，加载至内存中，程序中的地址为偏移量，当运行时被重定位，也就是加上基地址。重定位过程：每个段都有一个基地址记录在程序的“PCB（控制块）”中。基地址根据查表得到，此表名为LDT，也叫寄存器（内存映射表，段表），每个进程都有自己的LDT，由硬件操作查询。每次进程进程切换，表中的基地址也会被更改。**（B站哈工大操作系统课程）
 
 在地址转换的基础上，再增加硬件支持，将程序每个段分开存入物理内存，这样就能避免内部碎片，提高内存的适用。具体做法就是，加入寄存器，可以通过地址的前两位来当标志位，显式地说明要引用的段，任然保持基址和界限寄存器，针对不同的段寄存器则不同。
 
@@ -57,6 +57,10 @@
 ## 三、分页
 
 ### 1.概述
+
+解决内存分区（程序分段存储）导致的内存效率问题。
+
+**在操作系统初始化的时候，mem_mep()函数负责初始化，就把物理内存分成一页一页的，每一页都有一个记录，如每4K一页，也会被被标记是否使用，为0则是没有使用，当需要寻找那一页空闲时可以来此函数寻找；同时程序的每个段也被等分成页，换算成多少页，不足时取整。将页存入内存。**（B站哈工大操作系统课程）
 
 分页不是将一个进程的地址空间分割成不同长度的逻辑段，而是分割成固定大小的单元，每个单元称为一页。相应的，把物理内存看成定长槽块的阵列，叫做页帧。
 
@@ -86,7 +90,21 @@
 
 **例如：VPN为20，则需要2^20^次方个转换，也就是数组元素要有2^20^个，同时还有许多标志位，所以假设每个元素为4字节，那么最后页表大小为2^20^*4字节。**
 
-### 4.小结
+### 4.页表地址转换
 
-分页比较慢，需要许多额外的内存访问来访问页表，分页也会造成内存浪费，内存被页表塞满而不是有用的应用数据程序，为了解决这两个问题，**我们需要引入“快速地址转换”和“较小的表”**（见此目录另外两个文件）。
+由MMU硬件转换：
+
+![image-20210720224311060](https://gitee.com/wang_chunfeng/pic-go/raw/master/img/20210720224320.png)
+
+此时每一页的大小为4K，那么逻辑地址需要除此地址，也就是向右偏移12位。（此处的运算是针对程序的分页计算需要重定位的地址）。
+
+![image-20210720224516821](https://gitee.com/wang_chunfeng/pic-go/raw/master/img/20210720224518.png)
+
+得到程序中的页数之后，再去查页表，得到页框号，也就是内存的分页号数，然后再重定位。
+
+![image-20210720224914857](https://gitee.com/wang_chunfeng/pic-go/raw/master/img/20210720224916.png)
+
+### 5.小结
+
+此处的分页无法与分段较好的联系起来，我们需要引入新的机制或者策略，完美的实现虚拟内存。同时分页比较慢，需要许多额外的内存访问来访问页表，分页也会造成内存浪费，内存被页表塞满而不是有用的应用数据程序，为了解决这两个问题，**我们需要引入“快速地址转换”和“较小的表”**（见此目录另外两个文件，段页结合才是操作系统的内存管理）。
 
