--- a/2-1 C语言/2. 数据结构/2-12 五种排序.md
+++ b/2-1 C语言/2. 数据结构/2-12 五种排序.md
@@ -29,7 +29,7 @@ void bubble_sort(int * arr,int len)
     int i,j,t;
     for(i = 0; i < len; i++)
     {
-        for(j = i+1; j < len-1; j++)
+        for(j = i+1; j < len; j++)
         {
             if(arr[i] > arr[j])
             {
