--- a/1-3 应用层/计算机&操作系统/现代操作系统/1、虚拟化/1-2 虚拟化内存/7.虚拟内存：内存换出.md
+++ b/1-3 应用层/计算机&操作系统/现代操作系统/1、虚拟化/1-2 虚拟化内存/7.虚拟内存：内存换出.md
@@ -6,15 +6,55 @@
 
 ## 二、具体实现
 
-在换入的时候，需要进行一个判断，是否有空闲页面，如果没有的话需要换出去一些页。那么需要换什么页呢？此处需要一些算法计算。
+在换入的时候，需要进行一个判断，是否有空闲页面，如果没有的话需要换出去一些页。那么需要换什么页呢？此处需要一些算法计算。衡量这个算法的标准就是缺页次数（就是程序运行，产生了几次缺页）。
 
 ### FIFO先进先出
 
-
+换掉最先分配的页，与队列一样。
 
 ### MIN最优淘汰
 
+选最远将要使用的页淘汰，即用后面的页面请求来进行当前的决策。（需要知道将来的一个情况，也就是知道后面会访问那些页）。
 
+### LRU最近最少使用
 
-### LRU最近最少使用的项
+因为无法预知将来的情况，所以使用过去来预测未来。也就是选最近最长时间没有使用的页淘汰。
+
+## 三、LRU实现
+
+### 使用时间戳
+
+由于每个页记录在页表中，每执行一条指令都需要查页表，并且需要防止变量数值溢出，所以不能在操作系统中实现。
+
+![image-20210725163947426](https://gitee.com/wang_chunfeng/pic-go/raw/master/img/20210725163948.png)
+
+### 使用栈
+
+需要多此修改，每一条指令，都需要修改栈，代价太大了。
+
+![image-20210725164353199](https://gitee.com/wang_chunfeng/pic-go/raw/master/img/20210725164355.png)
+
+### LRU近似实现--将时间计数变为是和否（最近是否使用）--CLOCK算法
+
+当正常进行页面访问时，可以在MMU中将访问的页置为1，表示最近访问过。当缺页时，使用扫描，转圈，是1置为0，是0淘汰。
+
+不用操作系统维护一个复杂的数据结构，所以很快。
+
+![image-20210725164759876](https://gitee.com/wang_chunfeng/pic-go/raw/master/img/20210725164801.png)
+
+#### CLOCK算法缺陷与改造
+
+缺页很少，扫描的很慢时，无法体现“最近“的味道，扫描了一圈，发现都是1，最后又回到最初，剔除第一个，退化为fifo。
+
+**使用双指针，一个扫描指针定时清零即可**。
+
+![image-20210725170239616](https://gitee.com/wang_chunfeng/pic-go/raw/master/img/20210725170241.png)
+
+## 四、换入换出的附带问题
+
+**给一个进程分配多少个物理页合适呢？一个进程，有自己的虚拟内存，自己的段表以及页表，也有自己的Clock链表或者数组，因此也需要有自己的内存，这个程序只在固定大小的内存进行工作，以此提高内存的利用率**。
+
+![image-20210725170725482](https://gitee.com/wang_chunfeng/pic-go/raw/master/img/20210725170726.png)
+
+**利用程序的局部性分配合理的页数，有相关算法可完成此处分配，如工作集**。
 
