--- a/2-1 C语言/2. 数据结构/2-1 链表定义、创建与遍历.md
+++ b/2-1 C语言/2. 数据结构/2-1 链表定义、创建与遍历.md
@@ -146,5 +146,27 @@ int length_list(PNODE pHead)
   return len;
 }
 
+bool delete_list(PNODE pHead,int pos,int *pVal)
+{
+  int i;
+  PNODE p = pHead;
+  //循环到p指向pos-1的位置
+  while( NULL != p->pNext && i<pos-1)
+  {
+      p = p->pNext;
+      ++i;
+  }
+ if (NULL == p->pNext || i > pos -1)
+  {
+      return false;
+  }
+ PNODE q = p->pNext;
+ *pVal = p->data;
+ p->pNext=q->pNext;
+ free(q);
+ q=NULL;
+ return true;
+}
+
 ```
 
