--- a/2-1 C语言/2. 数据结构/2-3 链表的插入和删除.md
+++ b/2-1 C语言/2. 数据结构/2-3 链表的插入和删除.md
@@ -63,7 +63,7 @@ bool delete_list(PNODE,int pos,int* pVal)
     *pVal = q->data;
     
     //删除p节点后面的节点
-    p->pNext = p->pNext-pNext;
+    p->pNext = p->pNext->pNext;
     free(q);
     q = NULL;
     
