--- a/2-1 C语言/1. C语言知识点/1-5 高级指针话题.md
+++ b/2-1 C语言/1. C语言知识点/1-5 高级指针话题.md
@@ -4,7 +4,26 @@
 
 ## 函数指针
 
-**函数指针初始化表达式中的&操作符是可选的，因为函数名被使用时总是由编译器把它转换为函数指针。&操作符知识显式地说明了编译器将隐式执行的任务**
+**函数指针初始化表达式中的&操作符是可选的，因为==函数名被使用时总是由编译器把它转换为函数指针==。&操作符知识显式地说明了编译器将隐式执行的任务**
+
+数组名总是由编译器转化为指针常量，也就是指向数组的首地址的一个指针。但是当加上&操作符号时，数组名则变成了一个数组指针。
+
+函数名总是由编译器转化为函数指针，也就是指向该函数的指针，因此在初始化一个函数指针时，可以省略取地址符号，如果加上取地址符号，则是把该函数的地址赋值给函数指针，也就是显示说明。
+
+那么对于函数指针的使用，不加解引用符号，编译器也能自动将该函数指针进行一个执行。
+
+```c
+pfun p= myfun;      //函数指针指向执行函数的地址
+p(100);//与(*p)(100)等价，只是编译器进行了自动转换。
+//下面七个地址相同，都是一个函数的地址入口，函数指针和函数名等价，编译器会找到该函数的地址，并且执行
+printf("p:%x\n"         ,    p);
+printf("*p:%x\n"        ,   *p);
+printf("&(*p):%x\n"     , &(*p));
+printf("myfun:%x\n"     , myfun); 
+printf("*myfun:%x\n"    , *myfun);
+printf("&myfun:%x\n"    , &myfun); //取函数名的地址就是该函数的地址，此处并没有进行函数指针转化
+printf("&(*myfun):%x\n" , &(*myfun)); //此处则是先进行一个函数指针的转化，myfun为一个函数指针，*（myfun）为该指针的内容，也就是函数地址，对函数地址再取地址也是一个函数地址
+```
 
 ### 回调函数
 
@@ -42,6 +61,85 @@ int compare_ints(void const *a,void const *b)
         return 1;
 }
 ```
+
+函数指针的用法
+第一种用法（1.c）
+
+```c
+#include <stdio.h>
+#include <stdlib.h>
+
+void (*pfun)(int data);
+void myfun(int data)
+{
+	printf("get data:%d\n",data);
+}
+int main(int argc,char *argv[])
+{
+	pfun = myfun;
+	(*pfun)(100);
+	return 0;
+}
+```
+
+
+从这个例子可以看到，我们首先定义了一个函数指针 pfun ,这个函数指针的返回值为void型,然后我们给函数指针赋值，赋值为 myfun,也就是myfun函数的首地址，在C99中myfun函数名就是myfun函数的首地址，此时 pfun 获得了 myfun 的地址，pfun的地址等于myfun的地址，所以最终调用 pfun();也就相当于调用了 myfun();
+
+第二种用法 (2.c)
+
+```c
+#include <stdio.h>
+#include <stdlib.h>
+
+typedef void (*pfun)(int data);
+/*typedef的功能是定义新的类型。第一句就是定义了一种 pfun 的类型，并定义这种类型为指向某种函数的指针，这种函数以一个 int 为参数并返回 void 类型。*/
+void myfun(int data)
+{
+	printf("get data:%d\n",data);
+}
+int main(int argc,char *argv[])
+{
+	pfun p= myfun;      //函数指针指向执行函数的地址
+	p(100);//与(*p)(100)等价，只是编译器进行了自动转换。
+	return 0;
+}
+
+```
+
+第二种用法：typedef 原变量类型 别名
+也可以用typedef来定义一个指针函数这样使在大型代码中更加简洁
+这里面的 pfun 代表的是函数的类型，通过 pfun 来代表 void (*)(int) 函数类型即 pfun 是指针函数的别名，pfun p相当于定义了一个
+void (*p)(int)函数指针。p = myfun 可以理解为将函数指针 p 指向 myfun 函数的地址，p(100);相当于执行myfun(100);
+
+第三种用法（3.c）
+
+```c
+#include <stdio.h>
+#include <stdlib.h>
+
+typedef struct gfun{
+	void (*pfun)(int);	
+}gfun;
+
+void myfun(int data)
+{
+	printf("get data:%d\n",data);
+}
+
+int main(int argc,char *argv[])
+{
+	gfun gcode={
+		.pfun = myfun,   //将函数指针指向要调用函数的地址
+	};
+	gcode.pfun(100);
+	return 0;
+} 
+```
+
+
+第三种用结构体函数指针的方法。
+
+这三种用法的结果相同
 
 ### 转移表
 
