--- a/3-2 面试准备/基础知识/熟悉常用的外围接口.md
+++ b/3-2 面试准备/基础知识/熟悉常用的外围接口.md
@@ -8,7 +8,7 @@
 
 ### 协议层
 
-在协议层来看，IIC是这样规定的，数据在SCL为高电平时，变化有效。所以：
+在协议层来看，IIC是这样规定的，数据在SCL为高电平时，进行读取数据，此时的数据有效。所以：
 
 + 开始信号：SCL为高，SDA被拉低，然后SCL被拉低。
 + 停止信号：SCL为高，SDA被拉高，然后SCL被拉低。
