--- a/1-3 应用层/计算机&操作系统/现代操作系统/2 并发/2-1 并发.md
+++ b/1-3 应用层/计算机&操作系统/现代操作系统/2 并发/2-1 并发.md
@@ -1,3 +1,29 @@
 ## 并发：介绍
 
 + 进程借助PCB完成上下文切换，线程则是借助TCB完成上下文切换，改变PC（程序计数器）指针。
+
+## 并发带来的挑战
+
+因为不可控的调度，使得线程会被随时切换，当线程在访问共享变量时，也会发生上下文切换。虽然切换之前，寄存器，TCB，PC等都会保存，但是若是对全局资源进行修改时，修改未完成就发生切换，此时另外一个进程又对该资源进行读写操作，则可能得到不确定的结果。
+
+## 如何解决并发带来的问题
+
+使得操作带上原子性，硬件需要提供一些有用的指令确保原子性，操作系统在此基础上，构建一个通用的合集，也就是同步原语。如此，便能构建多进程代码，以同步和受控的方式访问临界区（访问共享资源的代码段）。
+
+## 一些关键术语
+
+### 临界区
+
+访问共享资源的额一段代码
+
+### 竞态条件
+
+多个执行线程大致同时进入临界区时，它们都试图更新共享数据结构，导致了无法预测的结果。
+
+### 不确定性
+
+程序由一个或多个竞态条件组成，程序的输出因运行情况而异。
+
+### 互斥执行
+
+避免上诉问题，线程使用某种互斥原语，保证只有一个线程进入临界区，避免出现竞态，确定输出结果。
