--- a/1-3 应用层/计算机&操作系统/RTOS/1、内核层/1-1 绪论.md
+++ b/1-3 应用层/计算机&操作系统/RTOS/1、内核层/1-1 绪论.md
@@ -37,6 +37,11 @@
 
 ### 任务堆栈
 
-在存储器中按照后进先出的原则的连续存储空间.满足任务切换和响应中断时保存CPU寄存器钟的内容以及任务调用其他函数时需要.每个任务都有自己的堆栈.所有ucosII都含有一个指向盖任务堆栈的指针.
-堆栈增长方向在不同的处理器中不同,任务堆栈需要初始化,此函数也需要根据不同的机器来编写.
++ 在存储器中按照后进先出的原则的连续存储空间.
+
++ 满足任务切换和响应中断时，保存CPU寄存器钟的内容以及任务调用其他函数时需要压栈.
+
++ 每个任务都有自己的堆栈.所有ucosII都含有一个指向该任务堆栈的指针.
+
++ 堆栈增长方向在不同的处理器中不同,任务堆栈需要初始化,此函数也需要根据不同的机器来编写.
 
