--- a/2-1 C语言(算法)/1-1 C语言知识点/1-7 输入输出函数.md
+++ b/2-1 C语言(算法)/1-1 C语言知识点/1-7 输入输出函数.md
@@ -1,3 +1,36 @@
+## 算法题常用输入输出
+
+### scanf()
+
++ scanf也是要等回车,准确说是'/r'才会去读缓冲区的。
++ 用scanf输入字符串，整型以及浮点型数据时会把中间的分隔符（空格）丢弃，但是在结尾的最后一个‘\n’不会被丢弃，而当输入的是字符类型数据时，会把空格以及换行放在缓冲区中，这时就需要一个getchar来将空格或换行符从缓冲区中清除。
++ **scanf输入字符串时逗号不能作为分隔符**，用正则表达式,用%[^,]替代%s,意思是使scanf读取到逗号时停止读取.并且保留逗号, 
++ scanf处理单个字符时，不会把回车空格赋给字符串但是会赋给字符,就如同getchar一样,这时就要考虑'/n'的存在了。
+
+```c
+ while(scanf("%[^,\n]",&ch[i]) != EOF)
+```
+
+
+
+#### 小结
+
+  如果scanf输入的不是字符,那么分隔符为回车,空格,tab键时,两个数据之间的分隔符只是起区别两个数据的作用,把分隔好的两个数据分别赋值到各自定义好的变量或数组中去,**两个数据之间的分隔符被从缓冲区读出但是不起任何作用,当然最后一个'/n'会被留在缓冲区内**,除非用getchar();或scanf("%c",&c);把它读出来.
+回车是一定要有的,不管getchar还是scanf只要是通过缓冲区输入数据的函数都是等待回车键'/r'出现才进入缓冲区的。
+
+### getchar()
+
++ 键盘输入的字符都存到缓冲区内,一旦键入回车,getchar就进入缓冲区读取字符,一次只返回第一个字符作为getchar函数的值,如果有循环或足够多的getchar语句,就会依次读出缓冲区内的所有字符直到'/n'.要理解这一点,之所以你输入的一系列字符被依次读出来,是因为循环的作用使得反复利用getchar在缓冲区里读取字符,而不是getchar可以读取多个字符,事实上getchar每次只能读取一个字符.如果需要取消'/n'的影响,可以用getchar();来清除,这里getchar();只是取得了'/n'但是并没有赋给任何字符变量,所以不会有影响,相当于清除了这个字符.还要注意的是这里你在键盘上输入ssss看到的回显正是来自于getchar的作用,如果用getch就看不到你输入了什么.
++ getch()和getche()是conio.h中的库函数，它的作用是从键盘接收字符。
+
+### gets()
+
+
+
+
+
+
+
 ## 错误报告
 
 操作系统调用函数执行任务时，存在失败的可能。标准库函数在一个外部整形白能量errno中保存错误代码之后把这个信息传递个用户程序，提示操作失败的标准原因。
