--- a/3-1 嵌入式笔试面试系列/3-3 大疆历年笔试题（考点解析）.md
+++ b/3-1 嵌入式笔试面试系列/3-3 大疆历年笔试题（考点解析）.md
@@ -295,7 +295,9 @@ int main()
 
 MMU将VA映射到PA是以页（page）为单位的，对于32位的CPU，通常一页为4k，物理内存中的一个物理页面称页为一个页框（page frame）。虚拟地址空间划分成称为页（page）的单位,而相应的物理地址空间也被进行划分，单位是页框（frame）。页和页框的大小必须相同。
 
-![img](D:\personal\embedded-notebook\3-1 嵌入式笔试面试系列\assets\20180704152246240)
+![img](assets/20180704152246240)
+
+![image-20210813223445281](https://gitee.com/wang_chunfeng/pic-go/raw/master/img/20210813223446.png)
 
 CPU访问内存时的硬件操作顺序，各步骤在图中有对应的标号：
 
