--- a/2-1 C语言(算法)/1-4 刷题总结/4-0 高频题型总结.md
+++ b/2-1 C语言(算法)/1-4 刷题总结/4-0 高频题型总结.md
@@ -6,43 +6,71 @@
 
 ​		[C语言|回文数|方法二|不用数组|一边分割一边累加 - 回文数 - 力扣（LeetCode） (leetcode-cn.com)](https://leetcode-cn.com/problems/palindrome-number/solution/cyu-yan-hui-wen-shu-fang-fa-er-bu-yong-s-heqm/)
 
+## 二、常用解题方法
+
+### 2.1双指针
+
+#### 3.1.1判断链表是否相交
 
 
-## 二、数组
 
-### 2.1异或解题
+#### 3.1.2删除有序数组中的重复元素
+
+
+
+### 2.2异或解题
 
 1. 数组中只出现一次的数
 
    [C语言|数组中只出现一次的数组|异或解法 - 只出现一次的数字 - 力扣（LeetCode） (leetcode-cn.com)](https://leetcode-cn.com/problems/single-number/solution/cyu-yan-shu-zu-zhong-zhi-chu-xian-yi-ci-nat4f/)
 
-### 2.2哈希表
-
-### 2.3双重循环遍历
-
-### 2.4排序
-
-### 2.5合并有序数组
+### 2.3哈希表
 
 
 
-## 三、链表
+### 2.4双重循环遍历
 
-### 3.1快慢指针
 
-### 3.2删除链表节点
 
-#### 3.2.1单链表
+### 2.5排序
 
-#### 3.2.2循环链表
 
-#### 3.2.3双循环链表
 
-### 3.3增加链表节点
+## 三、数组
 
-#### 3.3.1单链表
+### 3.1合并有序数组
 
-#### 3.3.2循环链表
 
-#### 3.3.3双循环链表
+
+## 四、链表
+
+### 4.1删除链表节点
+
+#### 4.1.1单链表
+
+
+
+#### 4.1.2循环链表
+
+
+
+#### 4.1.3双循环链表
+
+
+
+
+
+
+### 4.2增加链表节点
+
+#### 4.2.1单链表
+
+
+
+#### 4.2.2循环链表
+
+
+
+
+#### 4.2.3双循环链表
 
