--- a/2-1 C语言(算法)/1-4 刷题总结/4-0 高频题型总结.md
+++ b/2-1 C语言(算法)/1-4 刷题总结/4-0 高频题型总结.md
@@ -16,6 +16,8 @@
 
 #### 3.1.2删除有序数组中的重复元素
 
+​		[26. 删除有序数组中的重复项 - 力扣（LeetCode） (leetcode-cn.com)](https://leetcode-cn.com/problems/remove-duplicates-from-sorted-array/)
+
 
 
 ### 2.2异或解题
