--- a/3-2 面试准备/基础知识/1. 了解操作系统原理.md
+++ b/3-2 面试准备/基础知识/1. 了解操作系统原理.md
@@ -44,13 +44,11 @@
 
 段页结合才是操作系统的内存管理，完美的实现虚拟内存。面向程序员，需要提供段的方式，即代码是分段且连续的，面向底层硬件，需要使用页的方式进行存储。
 
-首先用户程序中的物理地址访问，即**地址重定位：**在段表中得到虚拟地址，虚拟地址再放入页表中映射真实地物理地址。
+首先用户程序运行时，对物理地址访问，需要**地址重定位：**在段表中转换得到虚拟地址，虚拟地址再放入页表中映射真实地物理地址。
 
+**以fork创建进程为例：**
 
-
-**代码实现：**
-
- **1.分配虚存建段表**
+ **1.为进程分配虚存，建立段表**
 
  **2.分配内存建立页表**
 
@@ -62,15 +60,82 @@
 
 #### 快速地址转换
 
+多级页表增加了内存访问次数，需要引进更加快速的内存映射与查找方式，引入新的硬件机制，硬件缓存，TLB：地址转换旁路缓冲存储器。原理就是程序对某一个内存位置一般会连续访问，如数组，那么此时引入了硬件缓存，很容易便能找到下一个要访问的物理地址，完成转换。
+
+##### TLB未命中
+
+​	未命中时，可由硬件或者软件来处理。硬件依靠复杂指令集（CISC），软件采用精简指令集（RISC）。
+
+软件处理未命中，一般是用户态->(暂停指令流、中断)->内核->(更新TLB)->用户。
+
+##### TLB替换策略
+
+一种时替换最近最少使用的项（LRU）。这种策略可能会每次都触发TLB未命中。
+
+一种是随机替换。
+
+##### TLB的问题
+
++ 一个程序短时间内访问的页的数操过了TLB的页数，会产生大量的TLB未命中，一个解决办法是加大页的大小，是TLB的覆盖率有所增加。
++ TLB容易成为CPU流水线的瓶颈，例如，地址转换必须发生在一些其他硬件缓存之前，这会拖慢速度。解决办法是用虚拟地址直接访问缓存。
 
 
-### 多级页表
+
+#### 多级页表
+
+**三级页表转换方法：（两步）**
+
+（1）逻辑地址转线性地址：段起始地址+段内偏移地址=线性地址
+
+（2）线性地址转物理地址：
+
+每一个32位的线性地址被划分为三部分：页目录索引（10位）、页表索引（10位）、页内偏移（12位）
+
+- 从cr3中取出进程的页目录地址（操作系统调用进程时，这个地址被装入寄存器中）
+- 页目录地址 + 页目录索引 = 页表地址
+- 页表地址 + 页表索引 = 页地址
+- 页地址 + 页内偏移 = 物理地址
+  ![图片说明](https://gitee.com/wang_chunfeng/pic-go/raw/master/img/20210909112411)
 
 
 
-### 内存换入与换出
+### 内存换入
 
+并不是所有的页都会被映射，有时虚拟内存也会大于物理内存，所以可以在地址发生请求时才映射，也就是部分映射。当程序执行时，发现页错误，找不到页，于是产生中断，在中断中完成把磁盘数据加载到内存中，同时记录在页表中，由此完成新的一页内存映射。
 
+![image-20210725143554156](https://gitee.com/wang_chunfeng/pic-go/raw/master/img/20210909112905.png)
+
+### 内存换出
+
+ 当内存满了的时候，需要把一些内存页换入到磁盘中。
+
+在换入的时候，需要进行一个判断，是否有空闲页面，如果没有的话需要换出去一些页。那么需要换什么页呢？此处需要一些算法计算。衡量这个算法的标准就是缺页次数（就是程序运行，产生了几次缺页）。
+
+#### FIFO先进先出
+
+换掉最先分配的页，与队列一样。
+
+#### MIN最优淘汰
+
+选最远将要使用的页淘汰，即用后面的页面请求来进行当前的决策。（需要知道将来的一个情况，也就是知道后面会访问那些页）。
+
+#### LRU最近最少使用
+
+因为无法预知将来的情况，所以使用过去来预测未来。也就是选最近最长时间没有使用的页淘汰。
+
+#### LRU近似实现--将时间计数变为是和否（最近是否使用）--CLOCK算法
+
+当正常进行页面访问时，可以在MMU中将访问的页置为1，表示最近访问过。当缺页时，使用扫描，转圈，是1置为0，是0淘汰。
+
+不用操作系统维护一个复杂的数据结构，所以很快。
+
+#### CLOCK算法缺陷与改造
+
+缺页很少，扫描的很慢时，无法体现“最近“的味道，因为还没产生缺页，大家又都被访问过一遍了，都是1了。所以发生缺页时扫描了一圈，发现都是1，最后又回到最初，剔除第一个，退化为fifo。
+
+**使用双指针，一个扫描指针定时（在定时中断中操作）清零即可**。
+
+![image-20210725170239616](assets/20210725170241.png)
 
 
 
