--- a/1-3 应用层/计算机&操作系统/RTOS/2、应用层/2-2 任务设计.md
+++ b/1-3 应用层/计算机&操作系统/RTOS/2、应用层/2-2 任务设计.md
@@ -6,7 +6,7 @@
 
 用处：每当需要执行该任务时，就将该任务创建一次，由键盘操作启动你的任务通常采用这种结构。
 
-注意：采用此种方式来启动一个任务，除了实时性差意外，还可能有一些后遗症：
+注意：采用此种方式来 启动一个任务，除了实时性差意外，还可能有一些后遗症：
 
 + 占用共享资源未释放
 + 积压信号量或者消息
@@ -68,7 +68,7 @@
 
 任务之间不仅有数据流动，还有行为互动，而且互动之间的作用是通过操作系统的服务来实现的。
 
-### 系统钟体关联图
+### 系统总体关联图
 
 一个任务代码的色痕迹过程是**重上到下**的，我们首先需要知道各个任务再系统中的位置和角色，再将一个个任务进行详细关联分析，画出任务流程图，再按照流程图编写代码。
 
