--- a/1-3 应用层/计算机&操作系统/LINUX/1、环境搭建、LINUX使用、工具使用/环境搭建.md
+++ b/1-3 应用层/计算机&操作系统/LINUX/1、环境搭建、LINUX使用、工具使用/环境搭建.md
@@ -2,9 +2,12 @@
 
 配置了几天的环境，终于整好了，其中踩过的一些坑记录在经验总结中，在这就记录一下整个 环境搭建的思路以及原理，以后回忆起来也方便。
 
-首先它的一个开发环境稍微比较复杂。我们需要在一个Unubtu中编译文件，这是最根本的，于是我们需要一个交叉编译工具链，这其中有很多东西别人封装好了，具体细节有待研究。其次，我们需要将Unubtu的编译文件传输到开发板上，于是就需要一些文件传输软件，同时，比如NFS文件挂载，SHH远程登录，filezilla跨系统传输文件。PC机有许多强大的工具，比如filezilla，source insight等等，同时PC和开发板有时也需要互通（具体做什么还不知道）。这三者之间相互交织。
+**首先**它的一个开发环境稍微比较复杂。我们需要在一个Unubtu中编译文件，这是最根本的，于是我们需要一个交叉编译工具链，这其中有很多东西别人封装好了，具体细节有待研究。其次，我们需要将Unubtu的编译文件传输到开发板上，于是就需要一些文件传输软件，同时，比如NFS文件挂载，SHH远程登录，filezilla跨系统传输文件。PC机有许多强大的工具，比如filezilla，source insight等等，同时PC和开发板有时也需要互通（具体做什么还不知道）。这三者之间相互交织。
 
 韦东山大佬经过不断实践，到现在为止，发现的比较好的一种交互方式就是，Unubtu和Windows之间用net连接，同时，windows有很多网卡，可以把空闲的网卡和开发板组成局域网，这样子开发板和PC就通了，PC和Unubtu又是net模式，所以就等于三者互通了！！！
 
 详细过程参考韦东山的完全开发手册，里面又非常详细的配置过程。
 
+**其次**完成上述的三者互通之后，1.驱动程序要用到内核文件、2.编译驱动时用的内核、开发板上运行到内核，要一致、
+
+3.更换板子上的内核后，板子上的其他驱动也要更换
