--- a/1-3 应用层/计算机&操作系统/现代操作系统/2 并发/2-4 锁.md
+++ b/1-3 应用层/计算机&操作系统/现代操作系统/2 并发/2-4 锁.md
@@ -128,13 +128,21 @@ void unlock(lock_t *lock)
 
 ## 三、避免锁的自旋
 
+更多避免锁自旋的代码需要阅读内核源码。如Solaris、Linux的futex、Dahm锁等等。
+
 ### 简单办法：yield()
 
-在自选的时候，调用yield()，主动让出CPU，进入到就绪态，从而允许其他线程运行。
+在自旋的时候，调用yield()，主动让出CPU，进入到就绪态，从而允许其他线程运行。
 
 如果线程太多，频繁的上下文切换也会有开销，并且会有线程饿死的情况，一个线程一直得不到调度。
 
 ### 使用队列：休眠替代自旋
 
+显式地增加控制，再决定锁释放时，谁能抢到锁，需要操作系统提供更多地支持，并且需要一个队列来保存等待锁的线程。
 
+具体实现就是在锁的代码中加入队列操作，上锁和解锁都要去维护一个队列，以便达到锁被释放时，先入队的线程能拿到锁。
+
+### 两阶段锁
+
+第一阶段先自旋一段时间，希望可以获取锁，第二阶段如果没有获得锁，则进入休眠。
 
