--- a/3-2 面试准备/基础知识/1. 了解操作系统原理.md
+++ b/3-2 面试准备/基础知识/1. 了解操作系统原理.md
@@ -141,17 +141,27 @@
 
 ## 二、锁
 
+锁就是一个变量，我么需要声明一个某种类型的变量，如lock_t mutex;才能使用。
 
+这个锁变量保存了锁在某一时刻的状态，要么时可用的，要么是被占用的。
+
+借助指令集增加的一些**硬件原语**，可以实现成熟复杂的库。
+
+**评价一个锁：**1、能否提供互斥。2、是否公平，不会有线程饿死。3、性能是否足够好。
 
 
 
 ## 三、条件变量
 
+锁并不是并发程序设计所需的唯一原语，一个线程等待某些条件是很常见的现象，所以我们需要更直观的支持这种现象。
 
+ 条件变量是一个显式队列，当某些执行状态不满足时，线程可以把自己加入队列，等待该条件。另外某个线程，档它改变了上述状态时，就可以唤醒一个或者多个等待线程，让它们继续执行。
 
 
 
 ## 四、信号量
 
+与同步有关的所有工作的单一原语，可以代替锁和条件变量。同样的，利用底层的同步原语（锁和条件变量）就可以实现信号量。
 
+信号量是有一个整数值的对象，可以用两个函数来操作它。
 
