--- a/3-2 面试准备/基础知识/3. 了解常见的cortexM3内核的处理器.md
+++ b/3-2 面试准备/基础知识/3. 了解常见的cortexM3内核的处理器.md
@@ -70,7 +70,7 @@ STM32 的启动过程是指从 CPU 上电复位执行第 1 条指令开始到进
 
 复位序列 硬件复位之后，就是按下复位开关后。CPU 内的时序逻辑电路首先完成如下两个工作（程序代码下载到内部flash为例，flash首地址 0x0800 0000）
 
-- 将 0x08000000 位置存放的堆栈栈顶地址存放到 SP 中(MSP)。
+- 将 0x08000000 位置存放的堆栈 c栈顶地址存放到 SP 中(MSP)。
 - 将 0x08000004 位置存放的向量地址装入 PC 程序计数器。
 
 CPU 从 PC 寄存器指向的物理地址取出第 1 条指令开始执行程序，也就是开始执行复位中断服务程序 Reset_Handler。复位中断服务程序会调用SystemInit()函数来配置系统时钟、配置FMC总线上的外部SRAM/SDRAM，然后跳转到 C 库中__main 函数。由 C 库中的__main 函数完成用户程序的初始化工作（比如：变量赋初值等），最后由__main 函数调用用户写的 main()函数开始执行 C 程序。
