--- a/2-1 C语言(算法)/1-1 C语言知识点/1-1 大小端.md
+++ b/2-1 C语言(算法)/1-1 C语言知识点/1-1 大小端.md
@@ -1,7 +1,7 @@
 ### 大小端概念、 字节顺序
 + 在说大小端之前，要先提一下字节顺序（Endianness），它是描述数据以字节为一组在计算机内存中存储顺序的术语。 字节顺序可以是大端顺序（big-endian）或者小端顺序（little-endian）；在对多字节数据进行存储时，一般遵循以下规则；
 
-+ 小端：数据的最后一个字节先存储，即LSB；
++ 小端：数据的最后一个字节先存储，即LSB；D:\pandoc\pandoc-2.11.3.2
 
 + 大端：数据的第一个字节先存储，即MSB；
 
