--- a/2-1 C语言(算法)/1-1 C语言知识点/1-2 结构体.md
+++ b/2-1 C语言(算法)/1-1 C语言知识点/1-2 结构体.md
@@ -41,9 +41,15 @@ typedef struct TIME {
 struct TIME time;
 time.sa[4].c
 间接
-指向结构体的数组 可以直接用操作符 -> 访问内部变量
+指向结构体的指针 可以直接用操作符 -> 访问内部变量
+
+struct TIME *time;
+
+time->sa[4].c
 
 若不用->则需要给指针解应用之后再用”.”来访问
+
+(*time).sa[4].c
 
 ### 结构体存储
 边界对齐：
